# air-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT-STATUS.md  QUICKSTART.md  README.md  pyproject.toml
.ai/: AI_CHANGELOG.md  QUICKSTART.md  README.md
.ai/context/: architecture.md
.ai/scripts/: archive-tasks.py  list-tasks.py  new-task.py  search-tasks.py  task-stats.py  validate-tasks.py
.ai/tasks/: 20251003-1236-design-air-as-claude-tool.md  20251003-1244-rename-config-file-to-air-config.md  20251003-1255-implement-phase1-core-commands.md  TASKS.md
.ai/templates/: task-template.md
.air/: .profile-history  AI_CHANGELOG.md  QUICKSTART.md  README.md  air-config.json
.air/cache/: stats.json
.air/context/: DESIGN-dependency-aware-analysis.md  FUTURE-agent-interaction-design.md  language.md
.air/scripts/: archive-tasks.py  list-tasks.py  new-task.py  search-tasks.py  task-stats.py  validate-tasks.py
.air/tasks/: 20251003-1330-consider-ai-vs-air-folder-naming.md  20251003-1345-support-air-init-in-existing-projects.md  20251003-1415-implement-air-task-new.md  20251003-2122-complete-task-lifecycle-v0-2-2.md  20251004-0139-pypi-publishing-v0.2.3.md  20251004-0151-resource-classification-v0.3.0.md  20251004-0215-polish-ux-v0-3-2.md  20251004-0631-implement-interactive-link-v0-4-1.md  20251004-0707-v0-4-3-fix-broken-symlink-detection.md  20251004-0913-implement-code-review-v0.5.0.md  20251004-1001-v0.4.0-nomenclature-refactoring.md  20251004-1212-fix-templates-not-packaged-v0.5.1.md  20251004-1225-add-interactive-flag-to-link-add.md  20251004-1430-implement-interactive-link-v0-4-1.md  20251004-1500-v0-4-2-resource-type-simplification.md  20251004-1520-mvp-parallel-analysis-tracking.md  20251004-1706-add-tests-and-docs-for-wait-command.md  20251004-1745-v0.6.0-continue-enhance-analysis.md  20251004-1745-v0.6.1-continue-enhance-analysis.md  20251005-019-2158-analyze-parallel-safety.md  (+19 more)
docs/: AGENT-COORDINATION.md  AI-INTEGRATION.md  AI-TOOL-DESIGN.md  ARCHITECTURE.md  CODE-REVIEW.md  COMMANDS.md  DEVELOPMENT.md  FUTURE-ENHANCEMENTS.md  GRACEFUL-DEGRADATION.md  MCP-SERVER.md  SPECIFICATION.md  TASK-ARCHIVE-DESIGN.md  feature-plan-ai-workflows.md
scripts/: README.md  daily-analysis.sh
tests/: __init__.py
(+135 files in other folders)
