[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-toolkit"
version = "0.6.4"
description = "AIR - AI Review & Development Toolkit for multi-project assessment and AI-assisted development tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LiveData Inc"}
]
keywords = ["ai", "development", "assessment", "code-review", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",      # Beautiful terminal formatting
    "pydantic>=2.0.0",   # Data validation
    "pyyaml>=6.0",       # YAML config support
    "gitpython>=3.1.0",  # Git operations
    "jinja2>=3.1.0",     # Template rendering
    "psutil>=5.9.0",     # Cross-platform process management
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
air = "air.cli:main"

[project.urls]
Homepage = "https://github.com/LiveData-Inc/air-toolkit"
Documentation = "https://github.com/LiveData-Inc/air-toolkit/blob/main/docs/README.md"
Repository = "https://github.com/LiveData-Inc/air-toolkit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
air = ["templates/**/*", "templates/**/**/*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
